--- a/asset/css/sidebar.css
+++ b/asset/css/sidebar.css
@@ -74,7 +74,7 @@
   }
   
   .page-wrapper .theme.chiller-theme {
-    background: #1e2229;
+    background: #01225a;
   }
   
   /*----------------toggeled sidebar----------------*/
